refactoring Robot